--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodered-ha-utils",
+  "name": "@sefininio/nodered-ha-utils",
   "version": "1.0.0",
   "description": "utils for NodeRed & HA",
   "main": "index.js",
