--- a/package.json
+++ b/package.json
@@ -3,17 +3,36 @@
   "version": "1.0.1",
   "description": "utils for NodeRed & HA",
   "main": "index.js",
+  "browser": "dist/index.js",
+  "module": "dist/index.mjs",
   "scripts": {
-    "test": ""
+    "test": "nyc --require esm --extension js _mocha ./test/**/*.test.js --recursive --require esm",
+    "build:module": "esbuild ./src/index.js --platform=browser --global-name=nodered-ha-utils --outfile=./dist/index.mjs --target=es2017 --minify --format=esm --bundle",
+    "build:commonjs": "esbuild ./src/index.js --platform=browser --global-name=nodered-ha-utils --outfile=./dist/index.mjs --target=es2017 --minify --format=cjs --bundle",
+    "build:iife": "esbuild ./src/index.js --platform=browser --global-name=nodered-ha-utils --outfile=./dist/index.iife.js --target=edge16 --minify --format=iife --bundle",
+    "build": "npm run build:module && npm run build:commonjs && npm run build:iife",
+    "prebuild": "npm test",
+    "prepublishOnly": "npm run build"
+  },
+  "esm": {
+    "cjs": {}
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jsBlackBelt/nodered-ha-utils.git"
   },
   "author": "Sefi Ninio",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/jsBlackBelt/nodered-ha-utils/issues"
   },
-  "homepage": "https://github.com/jsBlackBelt/nodered-ha-utils#readme"
+  "homepage": "https://github.com/jsBlackBelt/nodered-ha-utils#readme",
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "4.2.0",
+    "esbuild": "0.7.15",
+    "esm": "3.2.25",
+    "mocha": "8.1.3",
+    "mock-local-storage": "1.1.15",
+    "nyc": "15.1.0"
+  }
 }
